[package]
name = "embedded-midi"
version = "0.1.0"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Use an embedded hal uart to send and receive midi"
repository = "https://github.com/mendelt/embedded-midi"
categories = ["no-std", "embedded"]
keywords = ["embedded", "midi", "uart"]
readme = "README.md"

[dependencies]
nb = "1.0.0"
embedded-hal = "0.2.4"
midi-types = "0.1.1"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
