[package]
name = "embedded-midi"
version = "0.1.2"
edition = "2018"
rust-version = "1.51"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Use an embedded hal uart to send and receive midi"
repository = "https://github.com/mendelt/embedded-midi"
categories = ["no-std", "embedded"]
keywords = ["embedded", "midi", "uart"]
readme = "README.md"

[dependencies]
nb = "1.0.0"
embedded-hal = "0.2.6"
midi-parse-render = { git = "https://github.com/x37v/midi-parse-render", branch = "main" }

[dev-dependencies]
embedded-hal-mock = "0.8.0"
