[package]
name = "embedded-midi"
version = "0.1.2"
edition = "2018"
rust-version = "1.62.1"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Use an embedded hal uart to send and receive midi"
repository = "https://github.com/mendelt/embedded-midi"
categories = ["no-std", "embedded"]
keywords = ["embedded", "midi", "uart"]
readme = "README.md"

[dependencies]
nb = "1.0"
embedded-hal-nb = "1.0"
midi-convert = "0.2.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] }
