[package]
name = "bluepill-examples"
version = "0.0.2"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
cortex-m-rt = "0.6.15"
cortex-m-semihosting = "0.3.7"
embedded-midi = { path = ".." }
panic-semihosting = "0.5.6"
nb = "1.0.0"
stm32f1xx-hal = {version = "0.7.0", features = ["rt", "stm32f103", "medium"]}
